cholera 0.4.0.9006
==================

- add "path.color" and "path.width" arguments to addNeighborhood().


cholera 0.4.0.9005
==================

- use directional arrow in plot.euclidean_distance().


cholera 0.4.0.9004
==================

- add distanceTime().


cholera 0.4.0.9003
==================

- add separate arguments for area polygons and for paths in addNeighborhood().
- set default to plot all pumps in addPump().
- add "add.roads" argument to snowMap().


cholera 0.4.0.9002
==================

- add new addNeighborhood() prototype.
- add "add.cases", "add.pumps" arguments to snowMap().


cholera 0.4.0.9001
==================

- add addCases().


cholera 0.4.0.9000
==================

- fix typo in addNeighborhood() documentation.


cholera 0.4.0
==================

# Data Changes #

- ortho.proj.pump and ortho.proj.pump.vestry now include node ID.

- roads and road.segments amend street names:
    "Unknown-B" to "Tent Court" (Edmund Cooper's map).
    "Unknown-D" to "St James's Market" (https://maps.nls.uk).
    "Unknown-E" to "Market Street (II)" (https://maps.nls.uk).

# Function Changes #

- addKernelDensity()
  uses "pump.subset" and "pump.select" arguments.

- addLandmarks()
  add landmarks from Edmund Cooper's map.

- classifierAudit() can return coordinates of address.

- nearestPump() now incorporates nearestPath().

- neighborhoodWalking()
  segment and sub-segment implementation.

- pumpData()
  returns node ID.

- timeSeries()
  includes day of the week.

- walkingDistance()
  add "simulated" expected cases.

# New Functions #

- addNeighborhood()

# New S3 Implementations #

- plot.walking
  type = "area.points" and type = "area-polygons".
  type = "area-polygons" via pearlString() replaces alphahull::ashape().

- print.walking() uses expectedCount().

# Vignette Changes #

- add "Kernel Density Plot".
- update "Pump Neighborhoods" with discussion of area plots.


cholera 0.3.0
==================

# Data Changes #

- ortho.proj: