@@ -10,6 +10,8 @@
 #' @param vestry Logical. TRUE uses the 14 pumps from the Vestry Report. FALSE uses the 13 in the original map.
 #' @param highlight Logical. Highlight selected road.
 #' @param unit Character. Unit of measurement: "meter" or "yard". NULL returns the map's native scale.
+#' @param time.unit Character. "hour", "minute", or "second".
+#' @param walking.speed Numeric. Default walking speed is 5 km/hr.
 #' @return A base R graphics plot.
 #' @seealso \code{\link{roads}}, \code{\link{road.segments}}, \code{\link{streetNumberLocator}}, \code{vignette("road.names")}
 #' @import graphics
@@ -22,7 +24,7 @@
 
 streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
   cases = "anchors", add.title = TRUE, add.pump = TRUE, vestry = FALSE,
-  highlight = TRUE, unit = "meter") {
+  highlight = TRUE, unit = "meter", time.unit = "minute", walking.speed = 5) {
 
   real.road.names <- unique(cholera::roads$name)
 
@@ -32,8 +34,9 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
   }
 
   if (is.null(cases) == FALSE) {
-    if (cases %in% c("anchors", "all") == FALSE)
+    if (cases %in% c("anchors", "all") == FALSE) {
       stop('If specified, "cases" must either be "anchors" or "all".')
+    }
   }
 
   if (is.character(road.name) == FALSE) {
@@ -41,8 +44,9 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
   } else if (road.name %in% real.road.names == FALSE) {
     case.name <- caseAndSpace(road.name)
     if (case.name %in% real.road.names == FALSE) {
-      error.msg <- paste("Invalid road name.",
-        'Check spelling or see list of road names in vignette("road.names").')
+      txt1 <- "Invalid road name. Check spelling or"
+      txt2 <- 'see list of road names in vignette("road.names").'
+      error.msg <- paste(txt1, txt2)
       stop(error.msg)
     } else name <- case.name
   } else name <- road.name
@@ -51,7 +55,7 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
   roads.list <- split(cholera::roads[, c("x", "y")], cholera::roads$street)
 
   rng <- lapply(cholera::roads[cholera::roads$name == name, c("x", "y")],
-      range)
+    range)
   x.rng <- c(min(rng$x) - radius, max(rng$x) + radius)
   y.rng <- c(min(rng$y) - radius, max(rng$y) + radius)
 
@@ -61,23 +65,6 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
       asp = 1)
     invisible(lapply(roads.list, lines, col = "gray"))
 
-    if (add.pump) {
-      if (vestry) {
-        points(cholera::pumps.vestry[, c("x", "y")], pch = 17, cex = 1,
-          col = "blue")
-        text(cholera::pumps.vestry[, c("x", "y")],
-          label = paste0("p", cholera::pumps.vestry$id), pos = 1)
-      } else {
-        points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
-        text(cholera::pumps[, c("x", "y")],
-          label = paste0("p", cholera::pumps$id), pos = 1)
-      }
-    }
-
-    if (highlight) {
-      invisible(lapply(roads.list[paste(selected.road)], lines, col = "red",
-        lwd = 3))
-    }
   } else {
     plot(cholera::fatalities[, c("x", "y")], xlim = x.rng, ylim = y.rng,
       pch = NA, asp = 1)
@@ -102,7 +89,6 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
             text(cholera::fatalities[seg.cases, c("x", "y")],
               labels = cholera::fatalities$case[seg.cases], cex = 0.5)
           }
-
         }
       } else if (cases == "anchors") {
         text(cholera::fatalities.address[!seg.anchors, c("x", "y")],
@@ -121,34 +107,45 @@ streetNameLocator <- function(road.name, zoom = FALSE, radius = 0.1,
         }
       }
     }
+  }
 
-    if (add.pump) {
-      if (vestry) {
-        points(cholera::pumps.vestry[, c("x", "y")], pch = 17, cex = 1,
-          col = "blue")
-        text(cholera::pumps.vestry[, c("x", "y")],
-          label = paste0("p", cholera::pumps.vestry$id), pos = 1)
-      } else {
-        points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
-        text(cholera::pumps[, c("x", "y")],
-          label = paste0("p", cholera::pumps$id), pos = 1)
-      }
+  if (add.pump) {
+    if (vestry) {
+      points(cholera::pumps.vestry[, c("x", "y")], pch = 17, cex = 1,
+        col = "blue")
+      text(cholera::pumps.vestry[, c("x", "y")],
+        label = paste0("p", cholera::pumps.vestry$id), pos = 1)
+    } else {
+      points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
+      text(cholera::pumps[, c("x", "y")],
+        label = paste0("p", cholera::pumps$id), pos = 1)
     }
+  }
 
-    if (highlight) {
-      invisible(lapply(roads.list[paste(selected.road)], lines, col = "red",
-        lwd = 3))
-    }
+  if (highlight) {
+    invisible(lapply(roads.list[paste(selected.road)], lines, col = "red",
+      lwd = 3))
   }
 
   street.length <- cholera::streetLength(name, unit)
 
+  est.time <- cholera::distanceTime(cholera::streetLength(name),
+    unit = time.unit, speed = walking.speed)
+
+  if (time.unit == "hour") {
+    nominal.time <- paste(round(est.time, 1), "hr.")
+  } else if (time.unit == "minute") {
+    nominal.time <- paste(round(est.time, 1), "mins.")
+  } else if (time.unit == "second") {
+    nominal.time <- paste(round(est.time, 1), "secs.")
+  }
+
   if (is.null(unit)) {
-    subtitle <- paste(round(street.length, 2), "units")
+    subtitle <- paste(round(street.length, 1), "units;", nominal.time)
   } else if (unit == "meter") {
-    subtitle <- paste(round(street.length, 2), "meters")
+    subtitle <- paste(round(street.length, 1), "meters;", nominal.time)
   } else if (unit == "yard") {
-    subtitle <- paste(round(street.length, 2), "yards")
+    subtitle <- paste(round(street.length, 1), "yards;", nominal.time)
   }
 
   if (add.title) title(main = name, sub = subtitle)
