@@ -5,7 +5,13 @@
 #' @param zoom Logical.
 #' @param radius Numeric. Controls the degree of zoom.
 #' @param cases Character. Plot cases: NULL, "anchors" or "all".
+#' @param add.title Logical. Include title.
+#' @param add.pump Logical. Include nearby pumps.
+#' @param vestry Logical. TRUE uses the 14 pumps from the Vestry Report. FALSE uses the 13 in the original map.
+#' @param highlight Logical. Highlight selected road.
 #' @param unit Character. Unit of measurement: "meter" or "yard". Default is NULL, which returns the map's native scale.
+#' @param time.unit Character. "hour", "minute", or "second".
+#' @param walking.speed Numeric. Default walking speed is 5 km/hr.
 #' @return A base R graphics plot.
 #' @seealso \code{\link{roads}}, \code{\link{road.segments}}, \code{\link{streetNameLocator}}, \code{vignette("road.names")}
 #' @import graphics
@@ -16,10 +22,17 @@
 #' streetNumberLocator(243, zoom = TRUE, radius = 0)
 
 streetNumberLocator <- function(road.number, zoom = FALSE, radius = 1,
-  cases = "anchors", unit = NULL) {
+  cases = "anchors", add.title = TRUE, add.pump = TRUE, vestry = FALSE,
+  highlight = TRUE, unit = "meter", time.unit = "second", walking.speed = 5) {
 
   if (is.numeric(road.number) == FALSE) {
     stop("road.number must be numeric.")
+  }
+
+  if (is.null(unit) == FALSE) {
+    if (unit %in% c("meter", "yard") == FALSE) {
+      stop('If specified, "unit" must either be "meter" or "yard".')
+    }
   }
 
   if (road.number %in% unique(cholera::roads$street) == FALSE) {
@@ -27,13 +40,14 @@ streetNumberLocator <- function(road.number, zoom = FALSE, radius = 1,
   }
 
   if (is.null(cases) == FALSE) {
-    if (cases %in% c("anchors", "all") == FALSE)
+    if (cases %in% c("anchors", "all") == FALSE) {
       stop('If specified, "cases" must either be "anchors" or "all".')
+    }
   }
 
   roads.list <- split(cholera::roads[, c("x", "y")], cholera::roads$street)
   rng <- lapply(cholera::roads[cholera::roads$street == road.number,
-       c("x", "y")], range)
+    c("x", "y")], range)
   x.rng <- c(min(rng$x) - radius, max(rng$x) + radius)
   y.rng <- c(min(rng$y) - radius, max(rng$y) + radius)
 
@@ -42,14 +56,6 @@ streetNumberLocator <- function(road.number, zoom = FALSE, radius = 1,
       ylim = range(cholera::roads$y), pch = 15, cex = 0.5, col = "gray",
       asp = 1)
     invisible(lapply(roads.list, lines, col = "gray"))
-    points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
-    text(cholera::pumps[, c("x", "y")], label = paste0("p", cholera::pumps$id),
-      pos = 1, col = "blue")
-    invisible(lapply(roads.list[paste(road.number)], lines, col = "red",
-      lwd = 3))
-    st.name <- unique(cholera::roads[cholera::roads$street == road.number,
-      "name"])
-    title(main = paste0(st.name, ": 'Street' # ", road.number))
 
   } else {
     plot(cholera::fatalities[, c("x", "y")], xlim = x.rng, ylim = y.rng,
@@ -67,41 +73,78 @@ streetNumberLocator <- function(road.number, zoom = FALSE, radius = 1,
 
       if (cases == "all") {
         text(cholera::fatalities[!seg.cases, c("x", "y")],
-         labels = cholera::fatalities$case[!seg.cases], cex = 0.5)
+          labels = cholera::fatalities$case[!seg.cases], cex = 0.5)
         if (any(seg.cases)) {
-         text(cholera::fatalities[seg.cases, c("x", "y")],
-           labels = cholera::fatalities$case[seg.cases], cex = 0.5, col = "red")
+          if (highlight) {
+            text(cholera::fatalities[seg.cases, c("x", "y")],
+              labels = cholera::fatalities$case[seg.cases], cex = 0.5,
+              col = "red")
+          } else {
+            text(cholera::fatalities[seg.cases, c("x", "y")],
+              labels = cholera::fatalities$case[seg.cases], cex = 0.5)
+          }
         }
       } else if (cases == "anchors") {
         text(cholera::fatalities.address[!seg.anchors, c("x", "y")],
           labels = cholera::fatalities.address$anchor.case[!seg.anchors],
            cex = 0.5)
         if (any(seg.anchors)) {
-        text(cholera::fatalities.address[seg.anchors, c("x", "y")],
-          labels = cholera::fatalities.address$anchor.case[seg.anchors],
-          cex = 0.5, col = "red")
+          if (highlight) {
+            text(cholera::fatalities.address[seg.anchors, c("x", "y")],
+              labels = cholera::fatalities.address$anchor.case[seg.anchors],
+              cex = 0.5, col = "red")
+          } else {
+            text(cholera::fatalities.address[seg.anchors, c("x", "y")],
+              labels = cholera::fatalities.address$anchor.case[seg.anchors],
+              cex = 0.5)
+          }
         }
       }
     }
   }
 
-  points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
-  text(cholera::pumps[, c("x", "y")], label = paste0("p", cholera::pumps$id),
-   pos = 1)
-  invisible(lapply(roads.list[paste(road.number)], lines, col = "red",
-   lwd = 3))
-  st.name <- unique(cholera::roads[cholera::roads$street == road.number,
-   "name"])
+  if (add.pump) {
+    if (vestry) {
+      points(cholera::pumps.vestry[, c("x", "y")], pch = 17, cex = 1,
+        col = "blue")
+      text(cholera::pumps.vestry[, c("x", "y")],
+        label = paste0("p", cholera::pumps.vestry$id), pos = 1)
+    } else {
+      points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
+      text(cholera::pumps[, c("x", "y")],
+        label = paste0("p", cholera::pumps$id), pos = 1)
+    }
+  }
 
-   street.length <- cholera::streetLength(road.number, unit)
+  if (highlight) {
+    invisible(lapply(roads.list[paste(road.number)], lines, col = "red",
+      lwd = 3))
+  }
 
-   if (is.null(unit)) {
-     subtitle <- paste(round(street.length, 2), "units")
-   } else if (unit == "meter") {
-     subtitle <- paste(round(street.length, 2), "meters")
-   } else if (unit == "yard") {
-     subtitle <- paste(round(street.length, 2), "yards")
-   }
+  street.length <- cholera::streetLength(road.number, unit)
 
-   title(main = paste0(st.name, ": 'Street' # ", road.number), sub = subtitle)
+  est.time <- cholera::distanceTime(cholera::streetLength(road.number),
+    unit = time.unit, speed = walking.speed)
+
+  if (time.unit == "hour") {
+    nominal.time <- paste(round(est.time, 1), "hr.")
+  } else if (time.unit == "minute") {
+    nominal.time <- paste(round(est.time, 1), "mins.")
+  } else if (time.unit == "second") {
+    nominal.time <- paste(round(est.time, 1), "secs.")
+  }
+
+  if (is.null(unit)) {
+   subtitle <- paste(round(street.length, 1), "units;", nominal.time)
+  } else if (unit == "meter") {
+   subtitle <- paste(round(street.length, 1), "meters;", nominal.time)
+  } else if (unit == "yard") {
+   subtitle <- paste(round(street.length, 1), "yards;", nominal.time)
+  }
+
+  if (add.title) {
+    st.name <- unique(cholera::roads[cholera::roads$street == road.number,
+      "name"])
+    title(main = paste0(st.name, ": 'Street' # ", road.number), sub = subtitle)
+  }
 }
