@@ -6,7 +6,8 @@
 \usage{
 streetNameLocator(road.name, zoom = FALSE, radius = 0.1,
   cases = "anchors", add.title = TRUE, add.pump = TRUE, vestry = FALSE,
-  highlight = TRUE, unit = "meter")
+  highlight = TRUE, unit = "meter", time.unit = "minute",
+  walking.speed = 5)
 }
 \arguments{
 \item{road.name}{Character vector. Note that \code{streetNameLocator}() tries to correct for case and to remove extra spaces.}
@@ -26,6 +27,10 @@ streetNameLocator(road.name, zoom = FALSE, radius = 0.1,
 \item{highlight}{Logical. Highlight selected road.}
 
 \item{unit}{Character. Unit of measurement: "meter" or "yard". NULL returns the map's native scale.}
+
+\item{time.unit}{Character. "hour", "minute", or "second".}
+
+\item{walking.speed}{Numeric. Default walking speed is 5 km/hr.}
 }
 \value{
 A base R graphics plot.
